# image-resizing

./: .gitignore  CMakeLists.txt  README.md  resize_image.cpp
